infrastructure/gateway/ai-gateway.gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ai-gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: le-prod
    io.cilium/lb-ipam-ips: 192.168.50.242
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.ai.vincentdupain.com"
      tls:
        certificateRefs:
          - kind: Secret
            name: ai-gateway-tls
            namespace: gateway
