infrastructure/gateway/gateway.gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: le-prod
    io.cilium/lb-ipam-ips: ${gatewayLoadBalancerIP}
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.${gatewayDomain}"
      tls:
        certificateRefs:
          - kind: Secret
            name: gateway-tls
            namespace: gateway
